schema/testdata/errors/operation_set_forbidden_value_expression.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        update createProfile(id) with (username) {
            //expect-error:18:34:AttributeExpressionError:the @set attribute must be an assignment expression
            @set(profile.identity)
        }
    }
}
